--- a/video/index.html
+++ b/video/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <main>
+        <section class="video">
+            <video class="video__play" src="video.mp4" controls></video>
+        </section>
         <div class="logoArriba">
             <img src="src/img/vLogo1.png" alt="" id="logo1">
         </div>
