--- a/pagina de inicio/pagina de inicio.html
+++ b/pagina de inicio/pagina de inicio.html
@@ -9,9 +9,9 @@
 </head>
 <body id="body">
     <header class="header">
-        <img class="header__logo1" src="src/img/logo.png" alt="Logo">
-        <img class="header__logo2" src="src/img/icon1.png" alt="logo2">
-        <img class="header__logo3" src="src/img/icon2.png" alt="logo3">
+        <img class="header__logo1 col-1" src="src/img/logo.png" alt="Logo">
+        <img class="header__logo2 col-4" src="src/img/icon1.png" alt="logo2">
+        <img class="header__logo3 col-3" src="src/img/icon2.png" alt="logo3">
     </header> 
     <nav class="header__menu">
         <a class="menu__opcionesHome col-1" href="#">
@@ -42,32 +42,22 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <section class="sectionImage">
-                <img src="src/img/img1.png" alt="" id="img1">
-                <img src="src/img/img2.png" alt="" id="img2">
-                <img src="src/img/img3.png" alt="" id="img3">
-                <img src="src/img/img4.png" alt="" id="img4">
-                <img src="src/img/img3.png" alt="" id="img5">
-                <img src="src/img/img3.png" alt="" id="img6">
+                <img src="src/img/IMG_20230817_170240.jpg" alt="" id="img1">
+                <img src="src/img/IMG_20230817_170259.jpg" alt="" id="img2">
+                <img src="src/img/IMG_20230817_170024.jpg" alt="" id="img3">
+                <img src="src/img/IMG_20230817_170323.jpg" alt="" id="img4">
+                <img src="src/img/IMG_20230817_171010.jpg" alt="" id="img5">
+                <img src="src/img/IMG_20230817_171720.jpg" alt="" id="img6">
             </section>
           </div>
           <div class="carousel-item">
             <section class="sectionImage">
-                <img src="src/img/img1.png" alt="" id="img1">
-                <img src="src/img/img2.png" alt="" id="img2">
-                <img src="src/img/img3.png" alt="" id="img3">
-                <img src="src/img/img4.png" alt="" id="img4">
-                <img src="src/img/img3.png" alt="" id="img5">
-                <img src="src/img/img3.png" alt="" id="img6">
-            </section>
-          </div>
-          <div class="carousel-item">
-            <section class="sectionImage">
-                <img src="src/img/img1.png" alt="" id="img1">
-                <img src="src/img/img2.png" alt="" id="img2">
-                <img src="src/img/img3.png" alt="" id="img3">
-                <img src="src/img/img4.png" alt="" id="img4">
-                <img src="src/img/img3.png" alt="" id="img5">
-                <img src="src/img/img3.png" alt="" id="img6">
+                <img src="src/img/IMG_20230817_171847.jpg" alt="" id="img1">
+                <img src="src/img/IMG_20230817_171935.jpg" alt="" id="img2">
+                <img src="src/img/IMG_20230817_172240.jpg" alt="" id="img3">
+                <img src="src/img/IMG_20230817_172057.jpg" alt="" id="img4">
+                <img src="src/img/IMG_20230817_170557.jpg" alt="" id="img5">
+                <img src="src/img/IMG_20230817_170212.jpg" alt="" id="img6">
             </section>
           </div>
         </div>
@@ -82,11 +72,11 @@
     </div>
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1" class="carouselIndicador"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2" class="carouselIndicador"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3" class="carouselIndicador"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4" class="carouselIndicador"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5" class="carouselIndicador"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
         </div>
         <div class="carousel-inner">
